--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>My personal website</title>
 </head>
 <body>
@@ -15,7 +16,7 @@
             <h1>Hello I'm</h1>
             <h1 class="reddish-text">Jack Smith</h1>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum</p>
-            <a class="link-button" href="http://www.linkdin.com">HIRE ME</a>
+            <a class="link-button button-hover" href="http://www.linkdin.com">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/peter.png" alt="">
@@ -49,10 +50,10 @@
             <h3>Bruce Moccy</h3>
             <h5>Founder & CEO Alies</h5>
             <p>"Lorem Ipsum is simply dummy text of the </br> and typesetting industry. Lorem Ipsum"</p>
-            <a href="http://www.gmail.com"><button class="block-button">Leave me a message in the <br> <h2> Programming.hero1@gmail.com </h2></button></a>
+            <a href="#"><button class="block-button">Leave me a message in the <br> <h2> mail.tauhidul@gmail.com </h2></button></a>
         </div>
         <div class="copyright">
-            <p>Tauhid 2020 © All Rights Reserved</p>
+            <p>Copyright © 2020 - Tauhid</p>
         </div>
     </section>
 </body>
