--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1>Hello I'm</h1>
             <h1 class="reddish-text">Jack Smith</h1>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum</p>
-            <a class="link-button button-hover" href="http://www.linkdin.com">HIRE ME</a>
+            <a class="link-button button-hover" href="#">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/peter.png" alt="">
@@ -29,7 +29,7 @@
         <div class="mid-width">
             <h1>Biography</h1>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type</p>
-            <a class="link-button" href="http://www.mediafire.com">Download CV</a>
+            <a class="link-button" href="#">Download CV</a>
         </div>
     </section>
     <section class="latest-work">
